<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_side_menu"
    tools:context=".ui.order.SideMenuFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.lunchtray.model.OrderViewModel" />

        <!-- TODO: Add the data binding variable for the SideMenuFragment -->
        <variable
            name="sideMenu"
            type="com.example.lunchtray.ui.order.SideMenuFragment"
            />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/side_margin"
            android:paddingEnd="@dimen/side_margin"
            android:paddingBottom="@dimen/side_margin">

            <RadioGroup
                android:id="@+id/side_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- TODO: set the side in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/salad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{()-> viewModel.setSide("salad")}'
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["salad"].name}'
                    tools:text="Side 1" />

                <TextView
                    android:id="@+id/salad_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["salad"].description}'
                    tools:text="Side 1 description" />

                <TextView
                    android:id="@+id/salad_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["salad"].getFormattedPrice()}'
                    tools:text="$0.00" />

                <View
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/salad_description" />

                <!-- TODO: set the side in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/soup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{()-> viewModel.setSide("soup")}'
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["soup"].name}'
                    tools:text="Side 2" />

                <TextView
                    android:id="@+id/soup_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["soup"].description}'
                    tools:text="Side 2 description" />

                <TextView
                    android:id="@+id/soup_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["soup"].getFormattedPrice()}'
                    tools:text="$0.00" />

                <View
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/soup_description" />


                <!-- TODO: set the side in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/potatoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{()-> viewModel.setSide("potatoes")}'
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["potatoes"].name}'
                    tools:text="Side 3" />

                <TextView
                    android:id="@+id/potato_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["potatoes"].description}'
                    tools:text="Side 3 description" />

                <TextView
                    android:id="@+id/potato_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["potatoes"].getFormattedPrice()}'
                    tools:text="$0.00" />

                <View
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/potato_description" />

                <!-- TODO: set the side in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/rice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:onClick='@{()-> viewModel.setSide("rice")}'
                    android:text='@{viewModel.menuItems["rice"].name}'
                    tools:text="Side 4" />

                <TextView
                    android:id="@+id/rice_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["rice"].description}'
                    tools:text="Side 4 description" />

                <TextView
                    android:id="@+id/rice_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["rice"].getFormattedPrice()}'
                    tools:text="$0.00" />

            </RadioGroup>

            <View
                android:id="@+id/divider"
                style="@style/Widget.LunchTray.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/base_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/side_options" />

            <!-- TODO: set the text to the current subtotal value from the view model -->
            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.LunchTray.TextView.Subtotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal $5.00"
                android:text="@{viewModel.subtotal}"/>

            <!-- TODO: cancel the order when clicked -->
            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.Order.Button.Cancel"
                android:onClick="@{()-> sideMenu.cancelOrder()}"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/next_button" />

            <!-- TODO: go to the next screen when clicked -->
            <Button
                android:id="@+id/next_button"
                style="@style/Widget.Order.Button.Next"
                android:onClick="@{()-> sideMenu.goToNextScreen()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/subtotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
