<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 The Android Open Source Project.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.order.EntreeMenuFragment">
    
    <data>
        <variable
            name="viewModel"
            type="com.example.lunchtray.model.OrderViewModel" />

        <!-- TODO: Add the data binding variable for the EntreeMenuFragment -->
        <variable
            name="entreeMenu"
            type="com.example.lunchtray.ui.order.EntreeMenuFragment"
            />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/side_margin"
            android:paddingEnd="@dimen/side_margin"
            android:paddingBottom="@dimen/side_margin">

            <RadioGroup
                android:id="@+id/entree_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/cauliflower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{()-> (viewModel.setEntree("cauliflower"))}'
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["cauliflower"].name}'
                    tools:text="Entree 1" />

                <TextView
                    android:id="@+id/cauliflower_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["cauliflower"].description}'
                    tools:text="Entree 1 description" />

                <TextView
                    android:id="@+id/cauliflower_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["cauliflower"].getFormattedPrice()}'
                    tools:text="$0.00" />

                <View
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cauliflower_description" />

                <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/chili"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:onClick='@{()-> viewModel.setEntree("chili")}'

                    android:text='@{viewModel.menuItems["chili"].name}'
                    tools:text="Entree 2" />

                <TextView
                    android:id="@+id/chili_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["chili"].description}'
                    tools:text="Entree 2 description" />

                <TextView
                    android:id="@+id/chili_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["chili"].getFormattedPrice()}'
                    tools:text="$0.00" />

                <View
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chili_description" />

                <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/pasta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{()-> viewModel.setEntree("pasta")}'
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["pasta"].name}'
                    tools:text="Entree 3" />

                <TextView
                    android:id="@+id/pasta_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["pasta"].description}'
                    tools:text="Entree 3 description" />

                <TextView
                    android:id="@+id/pasta_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["pasta"].getFormattedPrice()}'
                    tools:text="$0.00" />

                <View
                    style="@style/Widget.LunchTray.Divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pasta_description" />

                <!-- TODO: set the entree in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/skillet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick='@{()-> viewModel.setEntree("skillet")}'
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["skillet"].name}'
                    tools:text="Entree 4" />

                <TextView
                    android:id="@+id/skillet_description"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:text='@{viewModel.menuItems["skillet"].description}'
                    tools:text="Entree 4 description" />

                <TextView
                    android:id="@+id/skillet_price"
                    style="@style/Widget.MenuItem.TextView.Info"
                    android:paddingTop="@dimen/base_margin"
                    android:text='@{viewModel.menuItems["skillet"].getFormattedPrice()}'
                    tools:text="$0.00" />

            </RadioGroup>

            <View
                android:id="@+id/divider"
                style="@style/Widget.LunchTray.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/base_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/entree_options" />

            <!-- TODO: set the text to the current subtotal value from the view model -->
            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.LunchTray.TextView.Subtotal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal $5.00"
                android:text="@{viewModel.subtotal}"/>

            <!-- TODO: cancel the order when clicked -->
            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.Order.Button.Cancel"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="@{()-> entreeMenu.cancelOrder()}"
                app:layout_constraintTop_toTopOf="@id/next_button" />

            <!-- TODO: go to the next screen when clicked -->
            <Button
                android:id="@+id/next_button"
                style="@style/Widget.Order.Button.Next"
                android:onClick="@{()-> entreeMenu.goToNextScreen()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/subtotal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
