...
            type="com.example.lunchtray.ui.order.StartOrderFragment"
            />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_start_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.order.StartOrderFragment"
        >

        <Button
            android:id="@+id/start_order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:layout_marginEnd="@dimen/base_margin"
            android:text="@string/start_order"
...
