...
            <!-- TODO: display the entree name based on the entree selection -->
            <TextView
                android:id="@+id/entree_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/order_summary"
                tools:text="Cauliflower"
                android:text='@{viewModel.entree.name}'/>

            <!-- TODO: display the entree price based on the entree selection -->
            <TextView
                android:id="@+id/entree_price"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
...
            <!-- TODO: display the side name based on the side selection -->
            <TextView
                android:id="@+id/side_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/entree_selection"
                tools:text="Spicy Potatoes"
                android:text='@{viewModel.side.name}'/>

            <!-- TODO: display the side price based on the side selection -->
            <TextView
                android:id="@+id/side_price"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
...
